--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MartaNiemiec/Forkify.git"
-  },
   "author": "Marta Niemiec",
   "license": "ISC",
   "bugs": {
@@ -19,15 +15,18 @@
   },
   "homepage": "https://github.com/MartaNiemiec/Forkify#readme",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9"
+    "babel-preset-env": "^1.6.1",
+    "html-webpack-plugin": "^3.0.7",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0"
+    "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
+    "fractional": "^1.0.0",
+    "uniqid": "^4.1.1"
   }
 }
